--- a/src/app/gramatica/gramatica.component.html
+++ b/src/app/gramatica/gramatica.component.html
@@ -1,6 +1,6 @@
 <div class="row mb-3">
     <div class="col-lg-12">
-        <button *ngIf="adminMode" pButton type="button" class="p-button-primary p-button-raised float-end"
+        <button *ngIf="this.mainService.admin == 1" pButton type="button" class="p-button-primary p-button-raised float-end"
             (click)="nuevaGramatica()">
             Añadir
         </button>
@@ -15,12 +15,12 @@
     <div *ngFor="let particula of gramatica; let index = index" class="col-lg-4 col-md-6 col-xs-12 my-3">
         <div class="row">
             <div class="col-2 ml-1">
-                <button *ngIf="adminMode" pButton type="button" class="p-button-danger p-button-raised float-left"
+                <button *ngIf="this.mainService.admin == 1" pButton type="button" class="p-button-danger p-button-raised float-left"
                     (click)="eliminarGramatica(particula.id)" label="🗑️">
                 </button>
             </div>
             <div class="col-6">
-                <button *ngIf="adminMode" pButton type="button" class="p-button-warning p-button-raised float-left"
+                <button *ngIf="this.mainService.admin == 1" pButton type="button" class="p-button-warning p-button-raised float-left"
                     (click)="editarGramatica(particula)" label="✏️">
                 </button>
             </div>
