--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -9,23 +9,27 @@
     </div>
 
     <div class="itemsMenu">
-        <button *ngFor="let item of menuItems;" mat-button class="menuButton" [routerLink]="[ item.ruta ]"
-            routerLinkActive="active">
+        <button *ngFor="let item of menuItems;" mat-button class="menuButton">
 
-            <h5 *ngIf="item.nombre != 'Administración'; else administracion">{{ item.nombre }}</h5>
+            <span *ngIf="item.nombre != 'Administración' && item.nombre != 'Cerrar sesión';else modoAdmin" [routerLink]="[ item.ruta ]">
+                <h5>{{ item.nombre }}</h5>
+                 
+            </span>
 
 
-            <ng-template #administracion>
-                <h5>
-                    <mat-icon class="adminPc">account_circle</mat-icon>&nbsp;&nbsp;<span
-                        *ngIf="!admin; else modoAdmin">{{ item.nombre
-                        }}</span>
-                    <ng-template #modoAdmin>
-                        <span (click)="logout()">Cerrar Sesión</span>
-                    </ng-template>
-                </h5>
-            </ng-template>
+           <ng-template #modoAdmin>
+            <h5 *ngIf="this.mainService.admin === 0" [routerLink]="[item.ruta]">
+                <mat-icon class="adminPc">account_circle</mat-icon>&nbsp;&nbsp;<span>Administración</span>
+            </h5>
 
+            
+            <h5 *ngIf="this.mainService.admin === 1" (click)="logout()">
+                <mat-icon class="adminPc">account_circle</mat-icon>&nbsp;&nbsp;<span>Cerrar sesión</span>
+            </h5>
+           </ng-template>
+           
+            
+        
         </button>
 
 
@@ -37,19 +41,19 @@
             <mat-icon>menu</mat-icon>
         </button>
         <mat-menu #beforeMenu="matMenu" xPosition="before">
-            <button *ngFor="let item of menuItems;" mat-menu-item [routerLink]="[ item.ruta ]"
-                routerLinkActive="active">
-                <span *ngIf="item.nombre != 'Administración'; else administracionMovil">{{ item.nombre }}</span>
+            <button *ngFor="let item of menuItems;" mat-menu-item routerLinkActive="active">
+                
+                <span *ngIf="item.nombre != 'Administración' && item.nombre != 'Cerrar sesión';else modoAdminMovil" [routerLink]="[item.ruta]">{{ item.nombre }}</span>
 
-                <ng-template #administracionMovil>
-                    <span>
-                        <mat-icon class="adminMovil">account_circle</mat-icon>&nbsp;&nbsp;<span
-                            *ngIf="!admin; else modoAdmin">{{ item.nombre
-                            }}</span>
-                        <ng-template #modoAdmin>
-                            <span (click)="logout()">Cerrar Sesión</span>
-                        </ng-template>
-                    </span>
+                <ng-template #modoAdminMovil>
+                    <h5 *ngIf="admin === 0" [routerLink]="[item.ruta]">
+                        <mat-icon class="adminPc">account_circle</mat-icon>&nbsp;&nbsp;<span>Administración</span>
+                    </h5>
+        
+                    
+                    <h5 *ngIf="admin === 1" (click)="logout()">
+                        <mat-icon class="adminPc">account_circle</mat-icon>&nbsp;&nbsp;<span>Cerrar sesión</span>
+                    </h5>
                 </ng-template>
 
 
