--- a/src/app/gramatica/gramatica.component.html
+++ b/src/app/gramatica/gramatica.component.html
@@ -16,7 +16,7 @@
         <div class="row">
             <div class="col-2 ml-1">
                 <button *ngIf="this.mainService.admin == 1" pButton type="button" class="p-button-danger p-button-raised float-left"
-                    (click)="eliminarGramatica(particula.id)" label="🗑️">
+                    (click)="eliminarGramatica(particula)" label="🗑️">
                 </button>
             </div>
             <div class="col-6">
